[package]
name = "tokio-nats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
tokio = { version = "1.16.1", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
tokio-stream = { version = "0.1.8" }
